--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -2,9 +2,38 @@ project-card {
     width: 100%;
     border: 1pxsolidblack;
     box-shadow: 0px0px5pxgray;
+    
 }
 .project-card img {
     width: 100%;
     height: 300px;
     object-fit: cover;
+    border-radius: 4px;
+}
+.project-card a{
+    color: #333;
+}
+.navbar ul{
+    margin: 0%;
+    padding: 0%;
+    background-color: antiquewhite;
+    padding: 10px;
+
+}
+.navbar li{
+    display:inline-block;
+    margin-right: 15px;
+}
+.navbar a{
+   text-decoration: none;
+   color: #333;
+   /* font-weight: 30px; */
+   font-size: 16px;
+   
+}
+a:hover{
+    color: rgb(35, 1, 135);
+    font-size: 16px;
+    font-weight: bold;
+
 }
