--- a/src/global.css
+++ b/src/global.css
@@ -1,9 +1,58 @@
 html {
     font-family: Helvetica, sans-serif;
-    
 }
 
-h1,h2,h3,h4,h5,h6 {
+body {
+    padding: 0;
+    margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: Helvetica, sans-serif;
 
+}
+
+.nav-container {
+    display: flex;
+    justify-content: space-between;
+    background-color: #f7f7f7;
+}
+
+.nav-items {
+    display: flex;
+    gap: 2.2rem;
+    padding: 1rem;
+}
+
+.nav-items a {
+    text-decoration: none;
+}
+
+.nav-items a:hover {
+    background-color: #c3bfbf;
+}
+
+.projects-list {
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 24px;
+    grid-row-gap: 24px;
+
+}
+
+
+.login-container {
+    display: flex;
+    padding: 1rem;
+}
+
+.login-container a {
+    text-decoration: none;
 }
