--- a/src/pages/SignupPage.css
+++ b/src/pages/SignupPage.css
@@ -1,44 +1,8 @@
-/* #id_username, #id_email, #id_password, #id_password1, #id_password2{
-    min-height: 45px;
-    min-width: 250px;
-} */
-
-.bg-color1{
+.bg-color1 {
     background-color: #f5f5f5;
 }
 
-/* form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-} */
-
-label, input {
+label,
+input {
     display: block;
-}
-ul.form {
-    width  : 500px;
-    padding: 0px;
-    margin : 0px;
-    list-style-type: none;
-}
-ul.form li  {
-    width : 500px;
-}
-ul.form li input {
-    width : 200px;
-}
-ul.form li textarea {
-    width : 450px;
-    height: 150px;
-}
-ul.form li.twoColumnPart {
-    float : left;
-    width : 250px;
-}
-.page_title{
-    margin-top: 20px;
-}
-button{
-    
 }
